objects/DM_Loan_Account__c.object
<CustomObject>
    <fields>
        <fullName>DM_Disbursal_Date__c</fullName>
        <description>Contract Date on the Loan account, this will be updated at the time of funding with the Expected Disbursal Date.</description>
        <inlineHelpText>Contract date on the loan. This will be updated at the time of funding with the expected disbursal date.</inlineHelpText>
        <label>DM Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Disbursal_Status__c</fullName>
        <label>DM Disbursal Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Disbursal</fullName>
                </value>
                <value>
                    <fullName>Partially Disbursed</fullName>
                </value>
                <value>
                    <fullName>Fully Disbursed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_Disbursed_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Disbursed Amount</description>
        <inlineHelpText>Total amount disbursed/funded to the borrower</inlineHelpText>
        <label>DM Amount Funded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Discount_Applied_On__c</fullName>
        <label>DM Discount Applied On</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DM_Interest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_Discount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This discount will be used at the time of paying off of amortization based loans.</description>
        <inlineHelpText>This discount will be used at the time of paying off of amortization based loans.</inlineHelpText>
        <label>DM Discount %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DM_Discounting_Based_Payoff__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Discounting Based Payoff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Draw_Period_Billing_Method__c</fullName>
        <description>Deprecated</description>
        <inlineHelpText>Deprecated</inlineHelpText>
        <label>DM Draw Period Billing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DM_None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_Draw_Period_End_Date__c</fullName>
        <description>Draw Period End Date</description>
        <inlineHelpText>Draw Period End Date is the date for the full/final disbursement</inlineHelpText>
        <label>DM Draw Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Draw_Term_Payment_Percent__c</fullName>
        <defaultValue>0</defaultValue>
        <description>For Line of Credit</description>
        <label>DM Draw Term Payment %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DM_Due_Day__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Due Day for the loan account.</description>
        <inlineHelpText>The day on which the loan payment is due.</inlineHelpText>
        <label>DM Current Due Day</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Early_Pre_Payment_Penalty_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is checked and account is passed it&apos;s maturity date then we do not asses pre payment penalty fees.</description>
        <label>DM Early Pre Payment Penalty Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Eligible_For_Payoff__c</fullName>
        <description>Check if the loan contract is eligible for loan payoff.</description>
        <formula>DM_Fees_Remaining__c +  DM_Interest_Remaining__c +  DM_Principal_Remaining__c &lt;=  DM_Excess__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Check if the loan contract is eligible for loan payoff.</inlineHelpText>
        <label>DM Eligible For Payoff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Error__c</fullName>
        <label>DM Error</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DM_Excess__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Payment Amount which is allocated towards excess on the account.
This amount did not reduce any of the running balance on this account.</inlineHelpText>
        <label>DM Excess</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Expected_Disbursal_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <inlineHelpText>This is the expected date on which the loan will be disbursed to the customer, this date will be used to derive the contract date.</inlineHelpText>
        <label>DM Expected Disbursal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Expected_Repayment_Start_Date__c</fullName>
        <defaultValue>TODAY() + 30</defaultValue>
        <inlineHelpText>This will be the date from when the customer will be start making the payments on this contract. The first payment date will be derived from payment start date.</inlineHelpText>
        <label>DM Payment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Fee_Accrued__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>DM Fee Accrued</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Fee_Remaining__c</fullName>
        <label>DM Fee Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DM_Fee_Set_Name__c</fullName>
        <label>DM Fee Set Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Fee_Set__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DM Fee Set</label>
        <referenceTo>loan__Fee_Set__c</referenceTo>
        <relationshipLabel>DM CL Contract</relationshipLabel>
        <relationshipName>DM_CL_Contract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DM_Fees_Billed__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This captures the total fees billed which is calculated at the time of billing.</description>
        <inlineHelpText>This captures the total fees billed which is calculated at the time of billing.</inlineHelpText>
        <label>DM Fees Billed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Fees_Paid__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Fees Paid</description>
        <inlineHelpText>Fees Paid</inlineHelpText>
        <label>DM Fees Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Fees_Remaining__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Fees Remaining</description>
        <inlineHelpText>Fees remaining</inlineHelpText>
        <label>DM Fees Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Fees_Suspended__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Denotes the total fees amount, which has been suspended.</description>
        <inlineHelpText>Denotes the total fees amount, which has been suspended.</inlineHelpText>
        <label>DM Fees Suspended</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Fees_Waived__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Waived Fees Amount on this account.</description>
        <inlineHelpText>Waived Fees Amount on this account.</inlineHelpText>
        <label>DM Fees Waived</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_First_Installment_Date__c</fullName>
        <description>Date of the first installment</description>
        <inlineHelpText>This is the desired start date of the repayment schedule that is provided while creating the loan application.</inlineHelpText>
        <label>DM First Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Floating_Rate_Revision_Date__c</fullName>
        <description>Date on which floating rate for a contract will be revised (if applicable).</description>
        <inlineHelpText>Date on which floating rate for a contract will be revised (if applicable).</inlineHelpText>
        <label>DM Floating Rate Revision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DM_Floating_Rate_Revision_Frequency__c</fullName>
        <description>This field defines floating interest rate revision frequency. Interest rate on floating rate loans will be revised on this selected frequency.</description>
        <inlineHelpText>This field defines floating interest rate revision frequency. Interest rate on floating rate loans will be revised on this selected frequency.</inlineHelpText>
        <label>DM Floating Rate Revision Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DM_Daily</fullName>
                </value>
                <value>
                    <fullName>DM_Monthly</fullName>
                </value>
                <value>
                    <fullName>DM_Billing Frequency</fullName>
                    <default>true</default>
                    <label>DM_Billing Frequency</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_Fractionalization_Status__c</fullName>
        <description>Describes whether loan is activated for Fractionalization.</description>
        <label>DM Fractionalization Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DM_Pending</fullName>
                    <default>true</default>
                    <label>DM_Pending</label>
                </value>
                <value>
                    <fullName>DM_Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_Frequency_of_Loan_Payment__c</fullName>
        <inlineHelpText>This decides the Payment Frequency, below are the supported ones:
Daily
Weekly
Bi-weekly
Semi-Monthly
Monthly
Bi-Monthly
Quarterly
Semi-Annual
Annual
Single-Payment</inlineHelpText>
        <label>DM Payment Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DM_Daily</fullName>
                </value>
                <value>
                    <fullName>DM_Weekly</fullName>
                </value>
                <value>
                    <fullName>DM_Bi-weekly</fullName>
                </value>
                <value>
                    <fullName>DM_Semi-Monthly</fullName>
                </value>
                <value>
                    <fullName>DM_Monthly</fullName>
                    <default>true</default>
                    <label>DM_Monthly</label>
                </value>
                <value>
                    <fullName>DM_Bi-Monthly</fullName>
                </value>
                <value>
                    <fullName>DM_Quarterly</fullName>
                </value>
                <value>
                    <fullName>DM_Semi-Annual</fullName>
                </value>
                <value>
                    <fullName>DM_Annual</fullName>
                </value>
                <value>
                    <fullName>DM_Single-Payment</fullName>
                </value>
                <value>
                    <fullName>DM_Semi-Monthly-PD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_Funding_in_Tranches__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked, if Funding in Tranches is allowed</inlineHelpText>
        <label>DM Funding in Tranches</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Grace_Period_for_Repayments__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the number of grace days for which the system waits, before applying late charges on the loan.</inlineHelpText>
        <label>DM Late Charge Grace Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_IOA_Generation_Status__c</fullName>
        <description>It will determine IOA Generation state i.e. Pending, Success or Failure.</description>
        <inlineHelpText>t will determine IOA Generation state i.e. Pending, Success or Failure.</inlineHelpText>
        <label>DM IOA Generation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DM_Success</fullName>
                </value>
                <value>
                    <fullName>DM_Pending</fullName>
                </value>
                <value>
                    <fullName>DM_Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_IOA_Waived__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Waived interest on Arrears Amount on this account.</description>
        <inlineHelpText>Waived interest on Arrears Amount on this account.</inlineHelpText>
        <label>DM Interest On Arrears Waived</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Ignore_Waiver_For_Rebate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, borrower will be rebated whether or not protect claim was raised.</description>
        <inlineHelpText>When checked, borrower will be rebated whether or not protect claim was raised.</inlineHelpText>
        <label>DM Ignore Waiver For Rebate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Include_In_Buyback_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to indicate if this contract must be included in the buy back process.</description>
        <inlineHelpText>This field is used to indicate if this contract must be included in the buy back process.</inlineHelpText>
        <label>DM Include In Buyback Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Include_In_Metro2_File__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Metro 2 Format is the current standard electronic data reporting format for credit. You can generate a Metro 2 file only when &apos;Include in Metro 2 file&apos; is checked..</inlineHelpText>
        <label>DM Include In Credit Reporting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Income_Suspended__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DM Income Suspended</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Index_Rate__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Index Rate of the Floating Interest Rate Type Loan Product</inlineHelpText>
        <label>DM Current Index Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Accrued_Not_Due__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>This field gets updated on Payment Date. It is the accrued interest that is posted on the account.</description>
        <inlineHelpText>Interest balance as of last accrual date.</inlineHelpText>
        <label>DM Interest Accrued</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Accrued_On_Investment_Loans__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This is used to track the interest accrued on Investments loan, which does not match to the interest accrued for normal loans.</description>
        <label>DM Interest Accrued On Investment Loans</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Calculation_Method__c</fullName>
        <description>Billing Method.</description>
        <inlineHelpText>Flat - Interest computed every month on the original amount.
Declining Balance - Interest calculated on the reduced principal balance.
Flexible Repayment - Interest calculated on the reduced principal balance with the change in interest rate.</inlineHelpText>
        <label>DM Interest Calculation Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Flexible Repayment</fullName>
                </value>
                <value>
                    <fullName>Declining Balance</fullName>
                    <default>true</default>
                    <label>Declining Balance</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_Interest_Donated__c</fullName>
        <label>DM Interest Donated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Donated_on_Rollover__c</fullName>
        <label>DM Interest Donated on Rollover</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Interest_On_Overdue_Paid__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Interest on overdue amount paid so far.</description>
        <inlineHelpText>Interest on overdue amount paid so far.</inlineHelpText>
        <label>DM Interest On Overdue Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Interest_On_Overdue_Suspended__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Denotes the total interest on the overdue amount, which has been suspended.</description>
        <inlineHelpText>Denotes the total interest on the overdue amount, which has been suspended.</inlineHelpText>
        <label>DM Interest On Overdue Suspended</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Interest_On_Total_Overdue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Interest on total overdue</description>
        <inlineHelpText>Interest on total overdue</inlineHelpText>
        <label>DM Interest On Total Overdue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Only_Payment_Amt__c</fullName>
        <defaultValue>0</defaultValue>
        <description>For Fixed payments the constant amount for Interest only period is taken as input</description>
        <label>DM Interest Only Payment Amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Only_Period__c</fullName>
        <inlineHelpText>In this period only Interest amount will be used to calculate the payment amount, after this period the payment amount will include principal and interest both.</inlineHelpText>
        <label>DM Interest Only Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Paid__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Interest Paid
Account Balance Details- System calculated Uneditable fields</description>
        <inlineHelpText>Interest Paid
Account Balance Details- Fields calculated by the system which cannot be edited.</inlineHelpText>
        <label>DM Interest Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Payback__c</fullName>
        <label>DM Interest Payback</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Payback_on_Rollover__c</fullName>
        <label>DM Interest Payback on Rollover</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Period_Calculation__c</fullName>
        <description>This fields will is used to decide whether to consider start date for a period or not in interest calculation</description>
        <inlineHelpText>This fields will is used to decide whether to consider start date for a period or not in interest calculation</inlineHelpText>
        <label>DM Interest Period Calculation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DM_Include Start Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_Interest_Posted__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Interest Posted on account</description>
        <inlineHelpText>Interest Posted on account.</inlineHelpText>
        <label>DM Interest Posted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Posting_Day__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Interest Posting Day for the loan account.</description>
        <inlineHelpText>The day on which the loan payment is due.</inlineHelpText>
        <label>DM Interest Posting Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Posting_Frequency__c</fullName>
        <description>This decides the frequency at which Interest will be posted</description>
        <inlineHelpText>This decides the Interest Posting Frequency, below are the supported ones:
Daily
Weekly
Bi-weekly
Semi-Monthly
Monthly
Bi-Monthly
Quarterly
Semi-Annual
Annual
Single-Payment</inlineHelpText>
        <label>DM Interest Posting Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DM_Weekly</fullName>
                </value>
                <value>
                    <fullName>DM_Monthly</fullName>
                </value>
                <value>
                    <fullName>DM_Daily</fullName>
                </value>
                <value>
                    <fullName>DM_Bi-weekly</fullName>
                </value>
                <value>
                    <fullName>DM_Semi-Monthly</fullName>
                </value>
                <value>
                    <fullName>DM_Bi-Monthly</fullName>
                </value>
                <value>
                    <fullName>DM_Quarterly</fullName>
                </value>
                <value>
                    <fullName>DM_Semi-Annual</fullName>
                </value>
                <value>
                    <fullName>DM_Annual</fullName>
                </value>
                <value>
                    <fullName>DM_Single-Payment</fullName>
                </value>
                <value>
                    <fullName>DM_Billing Frequency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_Interest_Rate_Change_Method__c</fullName>
        <description>When interest rate is changed, the repayment schedule of the loans will be regenerated either by changing the payment amount or keeping the payment amount same based on this setup option.</description>
        <inlineHelpText>When interest rate is changed, the repayment schedule of the loans will be regenerated either by changing the payment amount or keeping the payment amount same based on this setup option.</inlineHelpText>
        <label>DM Interest Rate Change Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DM_Change Payment Amount</fullName>
                </value>
                <value>
                    <fullName>DM_Keep Same Payment Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_Interest_Rate_Last__c</fullName>
        <description>Last Interest Rate</description>
        <inlineHelpText>This is the last interest rate that was applied on the loan.</inlineHelpText>
        <label>DM Last Interest Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Rate_Past_Maturity__c</fullName>
        <description>Interest Rate Past Maturity</description>
        <inlineHelpText>Interest rate Applicable after Maturity Date.</inlineHelpText>
        <label>DM Interest Rate Past Maturity</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Rate__c</fullName>
        <description>Interest Rate</description>
        <inlineHelpText>Rate of Interest for the loan.</inlineHelpText>
        <label>DM Current Interest Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Rate_on_Due_IOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DM Interest Rate on Due IOA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Rate_on_Due_Interest__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DM Interest Rate on Due Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Rate_on_Due_Principal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DM Interest Rate on Due Principal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Remaining__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Unpaid Interest, accrued till last accrual date.</description>
        <inlineHelpText>Unpaid Interest, accrued till last accrual date.</inlineHelpText>
        <label>DM Interest Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Rounding_Error__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field stores the interest rounding error whenever LAD changes. It will be used to adjust the rounded value of interest accrued not due.</description>
        <label>DM Interest Rounding Error</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Service_Fee__c</fullName>
        <inlineHelpText>This is the service fee %age that will be charged to the originating bank.</inlineHelpText>
        <label>DM Interest Service Fee</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Suspended__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Denotes the total interest amount, which has been suspended.</description>
        <inlineHelpText>Denotes the total interest amount, which has been suspended.</inlineHelpText>
        <label>DM Interest Suspended</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Interest_Type__c</fullName>
        <inlineHelpText>This will be populated from lending product and must not be changed by the user.
Possible options for this field.
1) Fixed - Interest rate is fixed and will not change.
2) Floating- Interest rate can change based on the associated index rate.</inlineHelpText>
        <label>DM Interest Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Floating</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_Interest_Waived__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Waived interest Amount on this account.</inlineHelpText>
        <label>DM Interest Waived</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Interest_estimated__c</fullName>
        <inlineHelpText>Estimated Interest as per the Contract.</inlineHelpText>
        <label>DM Estimated Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DM_Invalid_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If system identify any data issues with this lending account, the reasons will be displayed on the top of lending account and this flag will be checked.
Once the issues are fixed, this flag will be unchecked by system.
User should not modify this flag.</inlineHelpText>
        <label>DM Invalid Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Investment_Interest_Options__c</fullName>
        <description>This field indicates what should be the action on interest accrued on Investment products</description>
        <label>DM Investment Interest Options</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DM_Donate</fullName>
                </value>
                <value>
                    <fullName>DM_Reinvest</fullName>
                </value>
                <value>
                    <fullName>DM_Pay Back</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_Investment_Product_loan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Investment Product loan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Is_Capitalization_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Is Capitalization Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Is_Interest_Posting_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Is Interest Posting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Is_Migrated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Is Migrated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_Is_Rescheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This flag will be checked once the lending account is rescheduled.
This should not be manually checked/unchecked by the user.</inlineHelpText>
        <label>DM Rescheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_LA_Amortization_Calculation_Method__c</fullName>
        <label>DM Amortization Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DM_Interest Bearing</fullName>
                    <default>true</default>
                    <label>DM_Interest Bearing</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_LA_Amortization_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>DM Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_LA_Amortization_Frequency__c</fullName>
        <label>DM Amortization Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DM_Monthly</fullName>
                    <default>true</default>
                    <label>DM_Monthly</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>